# proximity_check_mvp

./: .gitignore  README.md  frames_2026-02-16_17.29.03.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/melfa_bringup/share/melfa_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_description/share/melfa_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_driver/share/melfa_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_io_controllers/share/melfa_io_controllers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_mon_bringup/share/melfa_mon_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_mon_controllers/share/melfa_mon_controllers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_mon_description/share/melfa_mon_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_mon_msgs/share/melfa_mon_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_monitor/include/melfa_monitor/: melfa_rt_mon.hpp  rt_mon_def.hpp
install/melfa_monitor/share/melfa_monitor/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_msgs/share/melfa_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_rh6crh6020_moveit_config/lib/melfa_rh6crh6020_moveit_config/: servo_keyboard_input
install/melfa_rh6crh6020_moveit_config/share/melfa_rh6crh6020_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rh6frh5520_moveit_config/lib/melfa_rh6frh5520_moveit_config/: servo_keyboard_input
install/melfa_rh6frh5520_moveit_config/share/melfa_rh6frh5520_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_rv13frl_moveit_config/lib/melfa_rv13frl_moveit_config/: servo_keyboard_input
install/melfa_rv13frl_moveit_config/share/melfa_rv13frl_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rv2fr_moveit_config/lib/melfa_rv2fr_moveit_config/: servo_keyboard_input
install/melfa_rv2fr_moveit_config/share/melfa_rv2fr_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rv4fr_moveit_config/lib/melfa_rv4fr_moveit_config/: servo_keyboard_input
install/melfa_rv4fr_moveit_config/share/melfa_rv4fr_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rv4frl_moveit_config/lib/melfa_rv4frl_moveit_config/: servo_keyboard_input
install/melfa_rv4frl_moveit_config/share/melfa_rv4frl_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rv5as_moveit_config/lib/melfa_rv5as_moveit_config/: servo_keyboard_input
install/melfa_rv5as_moveit_config/share/melfa_rv5as_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_rv7frl_moveit_config/lib/melfa_rv7frl_moveit_config/: servo_keyboard_input
install/melfa_rv7frl_moveit_config/share/melfa_rv7frl_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/melfa_rv80fr_moveit_config/lib/melfa_rv80fr_moveit_config/: servo_keyboard_input
install/melfa_rv80fr_moveit_config/share/melfa_rv80fr_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/melfa_rv8crl_moveit_config/share/melfa_rv8crl_moveit_config/: package.dsv  (+7 more)
src/melfa_bringup/config/: test_goal_publishers_config.yaml
src/melfa_description/: package.xml
src/melfa_description/launch/: view_rv5as.launch.py
src/melfa_description/ros2_control/: rh6crh6020.hardware.xacro  rh6frh5520.hardware.xacro  rv2fr.hardware.xacro  rv4fr.hardware.xacro  rv4frl.hardware.xacro  rv5as.hardware.xacro
src/melfa_driver/: package.xml
src/melfa_mon_bringup/: CMakeLists.txt
src/melfa_mon_controllers/: CMakeLists.txt  melfa_mon_controllers.xml
src/melfa_mon_controllers/src/: melfa_mon_controllers.cpp
src/melfa_mon_description/: CMakeLists.txt  package.xml
src/melfa_mon_description/urdf/: monitor.urdf.xacro
src/melfa_mon_msgs/: CMakeLists.txt
src/melfa_mon_msgs/msg/: ControlMode.msg  ControllerType.msg  GpioCommand.msg  GpioState.msg  RobotInfo.msg
src/melfa_mon_msgs/srv/: GpioConfigure.srv  ModeConfigure.srv
src/melfa_monitor/: CMakeLists.txt  melfa_monitor.xml
src/melfa_monitor/include/melfa_monitor/: hardware_interface.hpp  visibility_control.h
src/melfa_monitor/src/: hardware_interface.cpp  melfa_rt_mon.cpp
src/melfa_moveit_config/melfa_rh6frh5520_moveit_config/: package.xml
src/melfa_moveit_config/melfa_rv5as_moveit_config/: package.xml
src/melfa_moveit_config/melfa_rv7frl_moveit_config/: package.xml
src/proximitty_checker/: CMakeLists.txt  package.xml
src/proximitty_checker/config/: proximity_params.yaml
src/proximitty_checker/launch/: teaching_mode_proximity.launch.py
src/proximitty_checker/src/: distance_estimator.cpp  joint_renamer.cpp  joint_state_pub.cpp
(+434 files in other folders)
